--- a/src/sass/main/_main.component.scss
+++ b/src/sass/main/_main.component.scss
@@ -206,6 +206,7 @@
         margin-left:10px;
         margin-right:10px;
         width:auto;
+        max-width: 100%;
     }
 }
 /*  RESPONSIVNESS */
